--- a/page-defaults/navbar.css
+++ b/page-defaults/navbar.css
@@ -2,7 +2,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 .topnav {
-    background-color: #333;
+  background-color:rgba(0,0,0,0.5);
+
     z-index: 2;
     position: fixed;
     width: 100%;
@@ -22,6 +23,12 @@
   .active {
     background-color: green;
     color: white;
+  }
+
+  @media screen and (max-width: 600px){
+    .active{
+      background-color: green;
+    }
   }
   
   .topnav .icon {
@@ -46,7 +53,7 @@
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -88,7 +95,7 @@
   }
   
   @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {position: fixed;}
     .topnav.responsive .icon {
       position: absolute;
       right: 0;
@@ -109,7 +116,7 @@
   }
 
   .nav-overlay{
-	position:absolute;
+	position:relative;
 	top:0;
 	right:0;
 	bottom:0;
@@ -128,6 +135,7 @@
 	.nav-overlay.active{
 		visibility:hidden;
 		opacity:0;
+    
 	}
 }
 
