--- a/services/in-browser-reporting/report.css
+++ b/services/in-browser-reporting/report.css
@@ -1,55 +1,91 @@
-.parallax-sidebar{
-    background-image: url("../../media/sidebar.jpg");
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat;
+.next-button{
+    width: 60%;
+    border: none;
+    padding: 14px 28px;
+    font-size: 16px;
+    font-weight: bolder;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    cursor: pointer;
+}
+
+
+#error-message{
+    display: none;
+    color: red;
+    
+}
+
+.disabled{
+    background-color: darkgrey;
+    color:lightgrey;
+}
+.enabled{
+    background-color: #04AA6D;
+    color: white;
+    cursor: pointer;
+}
+    .enabled:hover{
+        filter: brightness(1.2);
+    }
+
+.hidden-field{
+    display: none;
+}
+
+.question h1{
+    font-size: 20px;
+}
+.question p{
+    font-size: 18px;
+}
+
+.category-option{
     width: 100%;
-    height: 100%;
+    height: 12%;
+    margin: 1%;
+    color:white;
+    background-color: #04AA6D;
+    font-size: 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    border: none;
 }
-.form-area{
-	background-color: white;
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-	width: 50%;
-	min-width: 50%;
-	margin: auto;
-	margin-top: 0%;
-	border-right: #3f3f3f 3% solid;
-	border-left: #3f3f3f 3% solid;
-	box-shadow: -60px 0px 100px -90px #000000, 60px 0px 100px -90px #000000;
-	min-height: 700px;
-	height: 100%;
+.category-option:hover{
+    filter: brightness(1.2);
 }
-@media (max-device-width: 600px){
-    .form-area{
-        width:100%;
-    }
+
+.category-other{
+    color: blue;
+    text-decoration: underline;
+    display: block;
+    float: right;
+    margin-right: 2%;
+    cursor: pointer;
+
 }
-.question-area{
-    width: 80%;
-    margin-left:10%;
+
+.issue-option{
+    width: 95%;
+    height: 10%;
+    color:white;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 1%;
+    background-color: darkslateblue;
+    font-size: 20px;
+    border-radius: 15px;
+    cursor: pointer;
 }
-@media (max-device-width: 600px){
-    .question-area{
-        width: 95%;
-        margin-left: 2.5%;
-    }
+
+.issue-option:hover{
+    filter: brightness(1.2);
 }
 
 
-.question{
-    text-align: left;
-}
-    .question h1{
-
-        font-size: 15px;
-    }
-    .question button{
-        
-    }
-
-.selected{
-
+.description-textbox{
+    width:90%;
+    resize:none;
 }
