--- a/home.css
+++ b/home.css
@@ -1,3 +1,257 @@
+body{
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-family: 'Lora', serif;
+}
+
+/*the exact dimensions of the navbar*/
+.topnav-spacer{
+    width: 100%;
+    height: 48px;
+}
+
+/*
+ * Sections
+ */
+
+/* A section with h1 header and paragraph info underneath.
+   No picture, just centered text.*/
+.basic {
+    justify-content: center;
+    text-align: center;
+}
+    .basic:after{
+        content: "";
+        display: table;
+        clear: both;
+    }
+    .basic h1 {
+        font-size: 45px;
+    }
+    .basic p {
+        margin-left: 15%;
+        margin-right: 15%;
+        text-align: left;
+    }
+    .basic .textbox{
+        margin-top: 0px;
+    }
+    @media screen and (max-width:600px) {
+        .basic p {
+            margin-left: 2%;
+            margin-right: 2%;
+        }
+    }
+
+/* A section with h1 header and paragraph info underneath.
+   Include an image*/
+.basic-img {
+    justify-content: center;
+    text-align: center;
+    height: 600px;
+    
+    background-color: #f8f8ff;
+}
+    .basic-img:after{
+        content: "";
+        display: table;
+        clear: both;
+    }
+    .basic-img .textbox{
+        margin-left: 8%;
+        margin-top: 45px;
+        width: 50%;
+        float: left;
+    }
+    .basic-img h1 {
+        color: #000052;
+        text-align: left;
+        font-family: 'Epilogue', sans-serif;
+        font-size: 65px;
+    }
+    .basic-img p {
+        margin-top: 5px;
+        text-align: left;
+        font-size: 20px;
+    }
+    .basic-img .phone-image{
+        max-width: 35%;
+        float: right;
+    }
+    .basic-img .inner-row{
+        margin-top:110px;
+        margin-bottom: 40px;
+    }
+    .basic-img .inner-row:after{
+        content: "";
+        display: table;
+        clear: both;
+    }
+    .basic-img button{
+        width: 45%;
+        margin-left: 2.5%;
+        float: left;
+        padding: 2.5%;
+        border: none;
+        cursor: pointer;
+        color: white;
+        border-radius: 10px;
+        font-family: 'Epilogue', sans-serif;
+        font-size: 20px;
+        font-weight: bolder;background-color: #000052;
+    }
+    .basic-img button:hover{
+        filter: brightness(1.1);
+    }
+    .basic-img i{
+        color: white;
+        float: left;
+    }
+    .basic-img img{
+        height: 600px;
+        max-width: 35%;
+        margin: 0;
+        object-fit: cover;
+    }
+    #android{
+        background-color: #A4C639;
+    }
+    #apple{
+        background-color: #C0C0C0;
+    }
+    @media screen and (max-width:600px) {
+        
+        
+        .basic-img img {
+            height: 0;
+        }
+        .basic-img{
+            height: auto;
+        }
+        .basic-img::before{
+            content: "";
+            background-image: url('./media/hand-holding-phone.png');
+            background-size: cover;
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            bottom: 0px;
+            left: 0px;
+            opacity: 0.4;
+
+        }
+        .basic-img .textbox{
+            width: 90%;
+            margin-left: 5%;
+            opacity: 1;
+            position: relative;
+            margin-top: 15px;
+        }
+        .basic-img .inner-row{
+            margin-top: 10px;
+            position: relative;
+        }
+    }   
+
+.steps .container:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+    .steps .left{
+        margin-left: 10%;
+        width: 25%;
+    }
+    .steps .right{
+        margin-left: 0%;
+        width: 55%;
+    }
+
+    .steps .card{
+        height: 300px;
+        margin-top: 25px;
+        float: left;
+        background-color: blue;
+        text-align: left;
+        font-family: 'Epilogue', sans-serif;
+        filter: drop-shadow(0.4rem 0.4rem 0.45rem rgba(0, 0, 30, 0.8));
+    }
+        .steps .card .textbox{
+            color: white;
+            margin-left: 5%;
+            margin-top: 35px;
+        }
+        .steps .card h1{
+            font-size: 22px;
+            font-family: cursive;
+        }
+        .steps .card h2{
+            font-size: 28px;
+        }
+        .steps .card p{
+            font-size: 18px;
+        }
+
+        #map-card{
+            background-image: url('./media/open-street-map.png');
+            background-position: center;
+            background-size: cover;
+        }
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .parallax-river-walk{
     background-image: url("./media/greenville-river-walk.jpg");
     height: 50%;
