--- a/page-defaults/grid-layout.css
+++ b/page-defaults/grid-layout.css
@@ -17,6 +17,8 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+
 h1,h2,h3,h4,p{
     margin-left: 2.5%;
     margin-right: 2.5%;
@@ -122,7 +124,7 @@ h1,h2,h3,h4,p{
         margin-bottom: 2%;
     }
         .section-header h1{
-            font-size: 60px;
+            font-size: 35px;
             margin:0;
             margin-top: 1%;
             margin-bottom: 3%;
@@ -208,6 +210,9 @@ h1,h2,h3,h4,p{
             }
         }
 
+
+    
+    
     .footer{
         text-align: left;
     }
@@ -272,7 +277,7 @@ h1,h2,h3,h4,p{
         }
         
     .green{
-        background-color: green;
+        background-color: #04AA6D;
         color: white;
     }
         .green a{
