--- a/page-defaults/navbar.css
+++ b/page-defaults/navbar.css
@@ -12,7 +12,7 @@
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -21,14 +21,7 @@
 
   
   .active {
-    background-color: green;
-    color: white;
-  }
-
-  @media screen and (max-width: 600px){
-    .active{
-      background-color: green;
-    }
+    background-color: #f9f9f9;
   }
   
   .topnav .icon {
