--- a/page-defaults/navbar.css
+++ b/page-defaults/navbar.css
@@ -1,6 +1,23 @@
 /*import for dropdown carrot*/
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+
+body{
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lora', serif;
+}
+
+/*the exact dimensions of the navbar*/
+.topnav-spacer{
+  width: 100%;
+  height: 48px;
+}
+
 .topnav {
   background-color:#333;
 
@@ -12,7 +29,7 @@
   .topnav a {
     float: left;
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -21,7 +38,7 @@
 
   
   .active {
-    background-color: #f9f9f9;
+    background-color: #0bab64;
   }
   
   .topnav .icon {
@@ -77,7 +94,7 @@
     display: block;
   }
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 1026px) {
     .topnav a:not(:first-child), .dropdown .dropbtn {
       display: none;
     }
@@ -87,7 +104,7 @@
     }
   }
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 1026px) {
     .topnav.responsive {position: fixed;}
     .topnav.responsive .icon {
       position: absolute;
@@ -124,7 +141,7 @@
 	opacity:1;
 	visibility:visible;
 }
-@media screen and (min-width:600px){
+@media screen and (min-width:1026px){
 	.nav-overlay.active{
 		visibility:hidden;
 		opacity:0;
